--- a/HF.ipynb
+++ b/HF.ipynb
@@ -99,7 +99,7 @@
     "ax1.set_xlim(left=0.0, right=6)\n",
     "\n",
     "# ax2.plot(rad_grid, ked, \"-b\", linewidth=2)\n",
-    "# ax2.set(xlabel=\"Radial distance [Bohr]\", ylabel=\"KED E$_{h}$ Bohr$^{-3}$\")\n",
+    "# ax2.set(xlabel=\"Radial distance [Bohr]\", ylabel=r\"KED E$_{h}$ Bohr$^{-3}$\")\n",
     "\n",
     "plt.show()"
    ]
