some minor updates

--- a/Localisation.ipynb
+++ b/Localisation.ipynb
@@ -22,49 +22,14 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "f47f388e-7316-48f8-ae25-f3774822e112",
-   "metadata": {},
-   "source": [
-    "dens_func:    Return a cubic spline of the electronic density.\n",
-    "d_dens_func:  Return a cubic spline of the first derivative of the electronic density.\n",
-    "dd_dens_func: Return a cubic spline of the electronic density Laplacian.\n",
-    "ked_func:     Return a cubic spline of the kinetic energy density."
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "36646a77-c6e0-47ca-934f-9d15ab330a28",
+   "id": "06f30a25-2628-4f43-a430-c2261b8e6bd4",
    "metadata": {},
    "source": [
-    "Task:\n",
-    "It would be good to code a little function that computes the electron localization function of Becke and Edgecombe too, which is just the difference of the kinetic energy with the Weizsacker kinetic energy (the Pauli kinetic energy) divided by the Thomas-Fermi kinetic energy. My old paper has some formulas nicely typeset. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "37ac7ca5-6daa-4b83-9fda-7342c311e6ce",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load Data From Server, Oxygen Atom in HCI function Basis\n",
-    "HCI = load(elem=\"Ne\", charge=0, mult=1, dataset=\"gaussian\")\n",
-    "\n",
-    "# arbitrary grid on which quantites are evaluated\n",
-    "rad_grid = np.linspace(0.0, 6.0, 1000)\n",
-    "\n",
-    "# splines of the quantites are generated\n",
-    "dens_spline = HCI.dens_func(spin=\"t\")\n",
-    "d_dens_spline = HCI.d_dens_func(spin=\"t\")\n",
-    "dd_dens_spline = HCI.dd_dens_func(spin=\"t\")\n",
-    "ked_spline = HCI.ked_func(spin=\"t\")\n",
-    "\n",
-    "# quantities are projected onto grid\n",
-    "dens = dens_spline(rad_grid)\n",
-    "d_dens = d_dens_spline(rad_grid)\n",
-    "dd_dens = dd_dens_spline(rad_grid)\n",
-    "ked = ked_spline(rad_grid)"
+    "dens_func:    Return a cubic spline of the electronic density.\\\n",
+    "d_dens_func:  Return a cubic spline of the first derivative of the electronic density.\\\n",
+    "dd_dens_func: Return a cubic spline of the electronic density Laplacian.\\\n",
+    "ked_func:     Return a cubic spline of the kinetic energy density."
    ]
   },
   {
@@ -82,20 +47,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "6aec1fec-2f96-44ea-a3cf-ff6d09c2d6d0",
+   "execution_count": 8,
+   "id": "afeb9f87-3bb1-44b7-b5dc-793b8a444f57",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Weizaecker = d_dens*d_dens/(8.0*dens)\n",
-    "Becke_Edge = 2/3*(ked-Weizaecker)/(dens)\n",
-    "Elec_Local = (3/2*dens*Becke_Edge)/(3/10*(6*np.pi**2)**(2/3)*dens**(5/3))\n",
-    "L = np.tanh(Elec_Local**(-1)-Elec_Local)"
+    "def edgecomb_localisation(ato_obj,grid):\n",
+    "    # returns edgecomb localisation function as an array\n",
+    "    dens_spline = ato_obj.dens_func(spin=\"t\")\n",
+    "    d_dens_spline = ato_obj.d_dens_func(spin=\"t\")\n",
+    "    dd_dens_spline = ato_obj.dd_dens_func(spin=\"t\")\n",
+    "    ked_spline = ato_obj.ked_func(spin=\"t\")\n",
+    "    dens = dens_spline(grid)\n",
+    "    d_dens = d_dens_spline(grid)\n",
+    "    dd_dens = dd_dens_spline(grid)\n",
+    "    ked = ked_spline(grid)\n",
+    "    Weizaecker = d_dens*d_dens/(8.0*dens)\n",
+    "    Becke_Edge = 2/3*(ked-Weizaecker)/(dens)\n",
+    "    edgecomb = (3/2*dens*Becke_Edge)/(3/10*(6*np.pi**2)**(2/3)*dens**(5/3))\n",
+    "    return edgecomb, dens, d_dens, dd_dens, ked, Weizaecker\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
+   "id": "37ac7ca5-6daa-4b83-9fda-7342c311e6ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load Data From Server, Oxygen Atom in HCI function Basis\n",
+    "ato_obj = load(elem=\"Ne\", charge=0, mult=1, dataset=\"gaussian\")\n",
+    "\n",
+    "# arbitrary grid on which quantites are evaluated\n",
+    "rad_grid = np.linspace(0.0, 6.0, 1000)\n",
+    "\n",
+    "# qunatities on a grid\n",
+    "edgecomb, dens, d_dens, dd_dens, ked, Weizaecker = edgecomb_localisation(ato_obj,rad_grid)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6aec1fec-2f96-44ea-a3cf-ff6d09c2d6d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Paul Ayers Transformation\n",
+    "L = np.tanh(edgecomb**(-1)-edgecomb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "46f2031c-20ad-45fd-b718-007ed32a87d4",
    "metadata": {},
    "outputs": [
@@ -135,24 +138,6 @@
     "ax2.set_xlim(left=0.0, right=6)\n",
     "\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "cd4d88e0-dedd-4755-b923-ac8236cd7e3c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.6666666666666667\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(5/3)"
    ]
   },
   {
